--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.0",
     "@mui/material": "^6.2.1",
     "@mui/styled-engine-sc": "^6.2.1",
+    "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "styled-components": "^6.1.13"
   },
